--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <title>weather</title>
 </head>
 <body>
+    <header>
+      <form>
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+             />
+          <input type="submit" value="Search"/>
+        </form>  
+    </header>
+    <main>
+        <div>
+        <h1>
+            pretoria
+        </h1>
+        <p>
+            Thursday 18:50, scattered clouds
+        <br/>
+        Humidity: 65% , Wind:3.13 km/h
+
+        </p>
+        </div>
+        <div>
+            🌤️24
+        </div>
+    </main>
     <footer>
         <p>
           This project was coded by
