--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             type="search"
             placeholder="Enter a city.."
             required
-            class="search-input"
-            id="search-input"
+            class="search-form-input"
+            id="search-form-input"
           />
 
           <input type="submit" value="Search" class="search-button" />
@@ -25,7 +25,7 @@
       <main>
         <div class="current-weather">
           <div>
-            <h1 class="current-city" id="current-city">Pretoria</h1>
+            <h1 class="current-city" id="city">Pretoria</h1>
             <p class="current-details">
               <span id="current-date"> thursday 18:50 </span>, scattered clouds
               <br />
@@ -56,5 +56,7 @@
         </p>
       </footer>
     </div>
+
+    <script src="src/index.js"></script>
   </body>
 </html>
