--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="src/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/style.css" />
+
     <title>weather</title>
   </head>
   <body>
@@ -32,7 +32,7 @@
       <main>
         <div class="current-weather">
           <div>
-            <h1 class="current-city" id="city">Pretoria</h1>
+            <h1 class="current-city" id="city"></h1>
             <p class="current-details">
               <span id="current-date"> thursday 18:50 </span>, scattered clouds
               <br />
@@ -41,8 +41,7 @@
           </div>
           <div class="current-temperature">
             <span class="current-temperature-icon">🌤️ </span
-            ><span class="current-temperature-value" id="current-temperature"
-              >30</span
+            ><span class="current-temperature-value" id="temperature"></span
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
