--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
           <div>
             <h1 class="current-city" id="city"></h1>
             <p class="current-details">
-              <span id="current-date"> thursday 18:50 </span>, scattered clouds
+              <span id="time"> </span>,<span id="description"> </span>
               <br />
-              Humidity: <strong>65%</strong>, Wind: <strong>3.13km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="current-temperature">
