--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
           <div>
             <h1 class="current-city" id="city"></h1>
             <p class="current-details">
-              <span id="time"> </span>,<span id="description"> </span>
+              <span id="day-time"> </span>,<span id="description"> </span>
               <br />
               Humidity: <strong id="humidity"></strong>, Wind:
               <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="current-temperature">
-            <span class="current-temperature-icon">🌤️ </span
-            ><span class="current-temperature-value" id="temperature"></span
+            <div id="icon"></div>
+            <span class="current-temperature-value" id="temperature"></span
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
@@ -53,8 +53,11 @@
           <a href="https://github.com/Gloria-Matumba" target="_blank"
             >Gloria Matumba</a
           >
-          and is
-          <a href="https://github.com/" target="_blank"> on GitHub</a> and
+          and open-sourced
+          <a href="https://github.com/Gloria-Matumba/Weather-" target="_blank">
+            on GitHub</a
+          >
+          and
           <a
             href="https://app.netlify.com/sites/bucolic-khapse-f33f8f/overview"
             target="_blank"
